--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ const API_KEY = "AIzaSyDyAZ9ZL7v0WGBQEAVIDBJUqIZzhzlfsZA"; // Your API Key
 // Add multiple channels here
 const channels = [
     { id: "UC_TkUBm_RuB_yHBa9WWYNVg", name: "Raw Talks with VK" },
-    { id: "UC-CBQChrXvLzYc9oxpMfFPg", name: "Na Anveshna" }
+    { id: "UC-CBQChrXvLzYc9oxpMfFPg", name: "Na Anveshna" },
+    { id: "UC4alTWCTl6y_jt2_jgmxPZQ", name: "Telugu Connects - Growth Podcast"}
 ];
 
 const container = document.getElementById("channels-container");
@@ -137,3 +138,4 @@ setInterval(fetchAllChannels, 10000);
 
 </body>
 </html>
+
